Add initial LSP server implementation