@@ -11,6 +11,7 @@
     <modules>
         <module>dev.thihup.jvisualg.frontend</module>
         <module>dev.thihup.jvisualg.backend</module>
+        <module>dev.thihup.jvisualg.lsp</module>
     </modules>
 
     <properties>
@@ -37,6 +38,14 @@
                     <source>22</source>
                     <target>22</target>
                     <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.5</version>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
                 </configuration>
             </plugin>
         </plugins>
